--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=AdvanceEcommerce
+APP_NAME= ShopSphere
 APP_ENV=local
 APP_KEY=base64:SbdVOKtgfcg7N6lRTvze0DFxqxoaQIafHiBRWwULmW4=
 APP_DEBUG=true
